# zhmfem

./: Cargo.toml  README.md  build.rs  tri2d3n_result.txt
.cargo/: config.toml
examples/: beam1d2n.rs  beam1d2n_webexample.rs  cantilever.rs  compare_quad.rs  compare_tri.rs  compress_matrix.rs  quad2d4n.rs  quad2d4n_args.rs  quad2d4n_webexample.rs  quad_h.rs  rect2d4n.rs  rod1D_ladder.rs  rod1d2n.rs  rod2D_10bar.rs  rod2d2n.rs  rod2d_10bar.rs  rod_geo_nonlinear.rs  rod_stage.rs  test4-7-1.rs  tri2d3n.rs  tri2d3n_args.rs  tri2d3n_result.txt  tri2d3n_tmp.rs  tri2d3n_webexample.rs  tri2d6n.rs  triangle.rs
results/: BarFrame_Rod2D2N_cholesky_s.txt  BarFrame_Rod2D2N_cholesky_s.vtk  Comparison_of_PARDISO_before_after_aligned_quad2d4n.txt  Comparison_of_PARDISO_before_after_aligned_tri2d3n.txt  WEBexample_Quad2D4N_1600_pardiso_s.vtk  WEBexample_Quad2D4N_cholesky_s.vtk  WEBexample_Quad2D4N_pardiso_s.vtk  WEBexample_Tri2D3N_auto_s.vtk  WEBexample_Tri2D3N_cholesky_s.vtk  WEBexample_Tri2D3N_pardiso_s.vtk  one-dim_stretch_Rod1D2N_cholesky_s.txt  one-dim_stretch_Rod1D2N_cholesky_s.vtk  one-dim_stretch_Rod1D2N_gs_s.txt  one-dim_stretch_Rod1D2N_gs_s.vtk  one-dim_stretch_Rod1D2N_pardiso_s.txt  one-dim_stretch_Rod1D2N_pardiso_s.vtk  stress2D_Quad2D4N_4_cholesky_s.txt  stress2D_Quad2D4N_4_cholesky_s.vtk  stress2D_Quad2D4N_cholesky_s.txt  stress2D_Quad2D4N_cholesky_s.vtk  stress2D_Tri2D3N_auto_s.vtk  stress2D_Tri2D3N_cholesky_s.txt  stress2D_Tri2D3N_cholesky_s.vtk  stress2D_Tri2D3N_gs_s.txt  stress2D_Tri2D3N_gs_s.vtk  stress2D_Tri2D3N_pardiso_s.txt  stress2D_Tri2D3N_pardiso_s.vtk
(+42 files in other folders)
