[package]
name = "zhmfem"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.dev]
#stack_size = "128MB"

[profile.release]
stack_size = "512"

[dependencies]
nalgebra = "0.33.2"
atomic_float = "1.1.0"
vtkio = {version = "0.6", default-features = false}

[lib]
doctest = false
